--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
                   </div>
                </div>
                <div class="col-md-6 padding_right_0">
-                  <div><img src="C:\Users\HP\Desktop\baet\images bb\IMG_9452 - Copy.JPG" class="about_img"></div>
+                  <div><img src="images bb\IMG_9452 - Copy.JPG" class="about_img"></div>
                </div>
             </div>
          </div>
