--- a/services.html
+++ b/services.html
@@ -85,11 +85,11 @@
                      <div class="btn_main"><a href="#">Sky</a></div>
                   </div>
                   <div class="col-md-4">
-                     <div><img src="image bb\IMG_9446.JPG" class="services_img"></div>
+                     <div><img src="images bb\IMG_9446.JPG" class="services_img"></div>
                      <div class="btn_main active"><a href="#">me</a></div>
                   </div>
                   <div class="col-md-4">
-                     <div><img src="image bb\Screenshot_20221122-131918.jpg" class="services_img"></div>
+                     <div><img src="images bb\Screenshot_20221122-131918.jpg" class="services_img"></div>
                      <div class="btn_main"><a href="#">Black and White</a></div>
                   </div>
                </div>
