--- a/index.html
+++ b/index.html
@@ -113,15 +113,15 @@
                <div class="row">
                   <div class="col-md-4">
                      
-                     <div><img src="C:\Users\HP\Desktop\baet\images bb\IMG_6749 - Copy.JPG" class="services_img"></div>
+                     <div><img src="images bb\IMG_6749 - Copy.JPG" class="services_img"></div>
                      <div class="btn_main"><a href="#">Sky</a></div>
                   </div>
                   <div class="col-md-4">
-                     <div><img src="C:\Users\HP\Downloads\IMG_9446.JPG" class="services_img"></div>
+                     <div><img src="images bb\IMG_9446.JPG" class="services_img"></div>
                      <div class="btn_main active"><a href="#">me</a></div>
                   </div>
                   <div class="col-md-4">
-                     <div><img src="C:\Users\HP\Downloads\Screenshot_20221122-131918.jpg" class="services_img"></div>
+                     <div><img src="images bb\Screenshot_20221122-131918.jpg" class="services_img"></div>
                      <div class="btn_main"><a href="#">Black and White</a></div>
                   </div>
                </div>
@@ -141,7 +141,7 @@
                   </div>
                </div>
                <div class="col-md-6 padding_right_0">
-                  <div><img src="C:\Users\HP\Desktop\baet\images bb\IMG_9452 - Copy.JPG" class="about_img"></div>
+                  <div><img src="images bb\IMG_9452 - Copy.JPG" class="about_img"></div>
                   </div>
                </div>
                
